--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ charset-normalizer==3.3.2
     # via requests
 click==8.1.7
     # via dlt
-dlt[duckdb]==0.4.11
+dlt==0.4.11
     # via -r requirements.in
-duckdb==0.10.3
+duckdb==0.9.2
     # via dlt
 fsspec==2024.5.0
     # via dlt
@@ -55,6 +55,8 @@ requests==2.32.2
 requirements-parser==0.9.0
     # via dlt
 semver==3.0.2
+    # via dlt
+setuptools==71.0.4
     # via dlt
 simplejson==3.19.2
     # via dlt
